# Ask-AI-Agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py
app/agent/: factory.py  system_prompt.py
app/agent/hooks/: approval_hook.py
app/agent/skills/analytics/: SKILL.md
app/agent/tools/: analytics_tools.py  read_tools.py  write_tools.py
app/api/: chat.py  properties.py  router.py  tenants.py
app/middleware/: auth.py
app/models/: __init__.py  base.py  charge.py  chat.py  lease.py  message.py  payment.py  property.py  tenant.py  unit.py
app/repositories/: __init__.py  analytics_repo.py  base.py  charge_repo.py  chat_repo.py  lease_repo.py  message_repo.py  property_repo.py  tenant_repo.py
app/schemas/: chat.py  domain.py
app/services/: chat_service.py  property_service.py  tenant_service.py
docs/: architecture.md  decisions.md  streaming_protocol.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ApprovalCard.tsx  ChatInput.tsx  ChatPage.tsx  MessageBubble.tsx  ToolIndicator.tsx
frontend/src/components/domain/: PropertiesPage.tsx  TenantsPage.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/sidebar/: Sidebar.tsx
frontend/src/hooks/: useChat.ts  useSessions.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: seed_data.py
tests/: conftest.py  test_analytics.py  test_api.py  test_approval_flow.py  test_exactly_once.py
